@@ -1,14 +1,19 @@
 package net.darkblade.mini_pekka.server.block;
 
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
+import net.darkblade.mini_pekka.client.EffectSkullBlockEntity;
+import net.darkblade.mini_pekka.client.ModBlockEntities;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.world.level.BlockGetter;
+import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.SkullBlock;
 import net.minecraft.world.level.block.WallSkullBlock;
 import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.world.level.block.entity.SkullBlockEntity;
+import net.minecraft.world.level.block.entity.BlockEntityTicker;
+import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.shapes.CollisionContext;
 import net.minecraft.world.phys.shapes.VoxelShape;
@@ -17,30 +22,37 @@ import java.util.Map;
 
 public class EffectWallSkullBlock extends WallSkullBlock {
 
-
-    private static final Map<Direction, VoxelShape> MINI_PEKKA_WALL_SHAPES = Maps.newEnumMap(Map.of(
-            Direction.NORTH, Block.box(4.0D, 4.0D, 8.0D, 12.0D, 11.0D, 16.0D), // pegado a la cara norte (z max)
-            Direction.SOUTH, Block.box(4.0D, 4.0D, 0.0D, 12.0D, 11.0D, 8.0D),  // pegado a la cara sur (z min)
-            Direction.EAST,  Block.box(0.0D, 4.0D, 4.0D, 8.0D, 11.0D, 12.0D),  // pegado a la cara este (x min)
-            Direction.WEST,  Block.box(8.0D, 4.0D, 4.0D, 16.0D, 11.0D, 12.0D)  // pegado a la cara oeste (x max)
+    private static final Map<Direction, VoxelShape> AABBS = Maps.newEnumMap(ImmutableMap.of(
+            Direction.NORTH, Block.box(4.0D, 4.0D, 8.0D, 12.0D, 12.0D, 16.0D),
+            Direction.SOUTH, Block.box(4.0D, 4.0D, 0.0D, 12.0D, 12.0D, 8.0D),
+            Direction.EAST,  Block.box(0.0D, 4.0D, 4.0D, 8.0D, 12.0D, 12.0D),
+            Direction.WEST,  Block.box(8.0D, 4.0D, 4.0D, 16.0D, 12.0D, 12.0D)
     ));
 
-    public EffectWallSkullBlock(SkullBlock.Type type, Properties properties) {
-        super(type, properties);
+    public EffectWallSkullBlock(SkullBlock.Type type, Properties props) {
+        super(type, props);
     }
 
     @Override
     public VoxelShape getShape(BlockState state, BlockGetter level, BlockPos pos, CollisionContext ctx) {
-        if (this.getType() == EffectSkullBlock.Types.MINI_PEKKA) {
-            Direction facing = state.getValue(FACING);
-            VoxelShape shape = MINI_PEKKA_WALL_SHAPES.get(facing);
-            if (shape != null) return shape;
-        }
-        return super.getShape(state, level, pos, ctx);
+        return AABBS.get(state.getValue(FACING));
     }
 
     @Override
     public BlockEntity newBlockEntity(BlockPos pos, BlockState state) {
-        return new SkullBlockEntity(pos, state);
+        return new EffectSkullBlockEntity(pos, state);
+    }
+
+    @Override
+    public <T extends BlockEntity> BlockEntityTicker<T> getTicker(
+            Level level, BlockState state, BlockEntityType<T> type
+    ) {
+        if (level.isClientSide) {
+            if (state.is(ModBlocks.MINI_PK_WALL_HEAD.get())) {
+                return createTickerHelper(type, ModBlockEntities.EFFECT_SKULL.get(),
+                        EffectSkullBlockEntity::animation);
+            }
+        }
+        return null;
     }
 }
